Fixed JS bug on IE, CSS adjustments

--- a/site-toast-popup.css
+++ b/site-toast-popup.css
@@ -1,18 +1,10 @@
 #sitetoastpopup {
-    font-size: 1em !important;
-    font-family: sans-serif;
+    font-size: 1.5em;
+    font-family: "Open Sans", sans-serif;
     position: fixed;
-    /*right: 20px;*/
     bottom: -100px;
-    /*width: 320px;*/
-    /*background: #FCFF90;*/
     z-index: 999;
-    /*padding: 15px;*/
-    font-size: 200%;
-    /*box-shadow: 0 0 10px -2px #000;*/
     text-align: center;
-    
-    /* Testing */
     color: #ffffff;
     width: 100%;
     left: 0;
@@ -26,7 +18,7 @@
     position: absolute;
     right: -3px;
     top: -4px;
-    font-family: sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 19px;
     color: #fff;
     cursor: pointer;
